--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -54,8 +54,8 @@ jobs:
         HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
           CMD curl -f http://localhost:5001/health || exit 1
         
-        # Start the application (replace YourApiName.dll with your actual DLL name)
-        ENTRYPOINT ["dotnet", "YourApiName.dll"]
+        # Start the application with correct DLL name
+        ENTRYPOINT ["dotnet", "PMS.dll"]
         EOF
     
     - name: Set up Docker Buildx
